fix html body not covering all page

--- a/public/main.css
+++ b/public/main.css
@@ -26,6 +26,10 @@
     src: url(/public/fonts/Cascadia.ttf);
 }
 
+html, body {
+    height: 100%;
+    width: 100%;
+}
 
 body {
 	background-color: var(--background-colour);
